src/test/ui/type-check/issue-22897.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-22897.rs:14:5
   |
LL |     []; //~ ERROR type annotations needed
   |     ^^ cannot infer type for `[_; 0]`

error: aborting due to previous error

